# tfg_codes

./: 4_link_mechanism.xacro  README.md
gazebo_description/: final_mechanism.world  simple_closed_chain.sdf  test.world
gazebo_description/meshes/: attachment_1.stl  fin_1.stl  hook_to_slider_1.stl
gazebo_plugin/: CMakeLists.txt  client.cpp  fin_mechanism_plugin.cc  fin_mechanism_plugin.cpp  fin_mechanism_plugin_gui.cpp  graphic_test.cpp
gazebo_plugin_tutorial/: CMakeLists.txt  hello_world.cc  model_push.cc
ignition_codes/closed_kinematics_practice/: simple_closed_chain.sdf
ignition_codes/fin_mechanism_description_sdf/: fin_description.sdf  inertia_tensors.txt  test_fin_description.sdf
qt-workspace/fin_mechanism_gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tfg_ros2_ws/src/4_link_mechanism_description/: package.xml  setup.cfg  setup.py
tfg_ros2_ws/src/4_link_mechanism_description/launch/: display.launch.py  gazebo.launch.py
tfg_ros2_ws/src/4_link_mechanism_description/meshes/: base_link.stl  fin_1.stl
tfg_ros2_ws/src/4_link_mechanism_description/urdf/: 4_link_mechanism.gazebo  4_link_mechanism.trans  4_link_mechanism.xacro  materials.xacro
tfg_ros2_ws/src/closed_chain_pkg/: CMakeLists.txt  package.xml
tfg_ros2_ws/src/closed_chain_pkg/description/: fin_description.sdf  fin_description.world  final_mechanism_no_gravity.world  gazebo_generated_sdf.sdf  gazebo_generated_sdf_modified.world  mesh.world  single_underwater_test.world  test.world  underwater_test.world
tfg_ros2_ws/src/closed_chain_pkg/description/meshes/: attachment_1_2.stl  attatchment_1.dae  ball_slider_1.dae  ball_slider_1.stl  base_link.dae  fin_1.dae  fin_1.stl  fin_1_2.stl  hook_to_slider_1.dae  input_bar_1_1.dae  input_bar_1_1.stl  input_bar_2_1.dae  input_bar_2_1.stl  input_bar_2_3.stl  slider.stl
tfg_ros2_ws/src/closed_chain_pkg/launch/: gazebo.launch.py  sdf_gazebo.launch.py  sdf_square.launch.py
tfg_ros2_ws/src/gazebo_plugin/: CMakeLists.txt  package.xml
tfg_ros2_ws/src/gazebo_plugin/src/: a.out  client.cpp  fin_mechanism_plugin.cpp
